updated two jupyter notebooks

--- a/python_data_importing.ipynb
+++ b/python_data_importing.ipynb
@@ -10,29 +10,14 @@
     "### chenmi22@msu.edu\n",
     "\n",
     "## Introduction\n",
-    "In your final project you are required to analyze and visualize natural-hazard related data set, which in general comes in a file with its unique data format. Many of you may not have the experience in working with these types of data files. In this pre-class assignment and also the in-class assignment on Tuesday (Feb. 12), we're going to work with some of the common types of data files using Python Data Analysis Library (PANDAS). This includes how to read in different types of data files and how to visualize the data for interpretation and drawing meaningful conclusions.\n",
+    "For your resarch project you are required to analyze and visualize a certain data set, which in general comes in a file with its unique data format. Many of you may not have the experience in working with these types of data files. In this jupyter notebook and also a different notebook, python_data_viz_analysis.ipynb, we're going to work with some of the common types of data files using Python Data Analysis Library (PANDAS). This includes how to read in different types of data files and how to visualize the data for interpretation and drawing meaningful conclusions.\n",
     "\n",
-    "## Goals for this pre-class assignment\n",
+    "## Goals for this tutorial on how to import data to python\n",
     "* Install and learn PANDAS\n",
     "* Learn how to download data with an exampe of the 2018 earthquake catalog of Southern California\n",
     "* Learn how to convert a text file into a csv file\n",
     "* Learn how to read an excel spread sheet into python notebook using PANDAS\n",
     "* Learn how to curate the data "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Team name and names of team members who worked with you on this assignment\n",
-    "please double click the cell below to edit and upon completing editing, use \"shift + enter\" to run the markdown cell."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "// put the names here"
    ]
   },
   {
@@ -106,7 +91,7 @@
     "In this section I am going to show you an example of getting the earthquake catalog data of year 2018 for Southern California. Here is the link to the [earthquake catalog](http://service.scedc.caltech.edu/ftp/catalogs/SCEC_DC/) from [the Southern California Earthquake Data Center.](http://scedc.caltech.edu/research-tools/datasets.html)\n",
     "\n",
     "You can get the data into Jupyter Notebook with the following steps:\n",
-    "1. Download the earthquake catalog text file for year 2018 \"2018.catalog.txt\" by clicking the link to the file and use \"File\" --> \"Save Page As\" in your web browser (e.g., Chrome). Save the file in the same directory of your jupyter notebook file of your pre-class assignment.\n",
+    "1. Download the earthquake catalog text file for year 2018 \"2018.catalog.txt\" by clicking the link to the file and use \"File\" --> \"Save Page As\" in your web browser (e.g., Chrome). Save the file in the same directory of your jupyter notebook file.\n",
     "2. Open \"Microsoft Excel\", go to \"File\" -> \"New Workbook\", and then go to \"File\" -> \"import\", choose the type of file you want to import as \"Text file\", click \"import\", choose \"2018.catalog.txt\" in your directory and click \"Get Data\". Next select the data type that descibes your data as \"Delimited\", set the delimiter your data contains as \"Tab\", \"Space\", and \"Treat consecutive delimiters as one\". Set the column data format as \"General\". Finally \"Finish\" importing of the text file to the existing sheet. Modify the excel sheet by removing the rows starting with a pound sign \"#\" that are comments, except the row with the column label information, such as \"YYY/MM/DD HH:mm:SS.ss ET GT MAG M LAT LON DEPTH Q EVID NPH NGRM\" that describe the earthquake date, time, event type, magnitude, and location, etc. Save the modified excel sheet as a csv file with a named of \"2018.catalog.csv\".\n",
     "2. read the csv file \"2018.catalog.csv\" in Jupyter Notebook with pandas.\n",
     "\n",
@@ -747,10 +732,50 @@
     "collapsed": true
    },
    "source": [
-    "### Congratulations, you're done with your pre-class assignment!\n",
-    "\n",
-    "Now, you just need to submit this assignment by uploading it to the course Desire2Learn web page.  Go to Assessments -> Assignments, find the link for the pre-class assignment, and upload it there. You and your teammates will get 1% bonus added to your final grade. See you in class!"
+    "### Congratulations, you're done with this tutorial on how to import data to python!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -770,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
