--- a/python_data_viz_analysis.ipynb
+++ b/python_data_viz_analysis.ipynb
@@ -4,18 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## In-class python tutorial for \"Natural Hazards and Environment\"\n",
+    "## Python tutorial for data analysis and visualization in Python\n",
     "****\n",
     "\n",
     "### Analyze and visualize year 2018 seismicity distribution in Southern California \n",
     "\n",
-    "### By Min Chen (Feb. 11, 2019)\n",
+    "### By Min Chen \n",
+    "### created on Feb. 11, 2019\n",
+    "### last modified on May 22, 2019 \n",
     "### chenmi22@msu.edu\n",
     "\n",
     "\n",
     "## Introduction\n",
     "\n",
-    "Southern Califonia is one of the most earthquake-prone regions in the world. Located on the transform plate boundary between Pacific and North America, the San Andreas Fault hosts a large number of earthquakes every year. In this in-class assignment, we will use the *.csv data file prepared in the pre-class assignment to explore the spatial and temporal variations of the seismicity in Southerm California in year 2018. We will also use this data set to test the Gutenberg-Richter Law, which describes the relationship between the magnitude (M) and the number of earthquakes (N) with magnitude M or larger, a linear relationship between M and log(N) (logarithm to base 10).\n",
+    "Southern Califonia is one of the most earthquake-prone regions in the world. Located on the transform plate boundary between Pacific and North America, the San Andreas Fault hosts a large number of earthquakes every year. In this jupyter notebook, we will use the *.csv data file prepared in a previous notebook for data importing to explore the spatial and temporal variations of the seismicity in Southerm California in year 2018. We will also use this data set to test the Gutenberg-Richter Law, which describes the relationship between the magnitude (M) and the number of earthquakes (N) with magnitude M or larger, a linear relationship between M and log(N) (logarithm to base 10).\n",
     "\n",
     "Earthquake catalog data credit: [the Southern California Earthquake Data Center.](http://scedc.caltech.edu/research-tools/datasets.html)\n",
     "\n",
@@ -26,7 +28,7 @@
     "3. [Hutton et al.,Bulletin of the Seismological Society of America, Vol. 100, No. 2, pp. 423–446, April 2010, doi: 10.1785/0120090130](http://scedc.caltech.edu/about/BSSA_2010_Hutton_SCSN_cat.pdf)\n",
     "\n",
     "\n",
-    "## Goals for this in-class assignment\n",
+    "## Goals for this jupyter notebook tutorial\n",
     "\n",
     "* Learn how to plot geospatial data (e.g., earthquakes and fault lines) on a map\n",
     "* Learn how to plot the histogram of earthquake data distribution with depth\n",
@@ -39,36 +41,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Team name and names of team members who worked with you on this assignment"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "// put the names here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Section 1: Install GeoPandas for plotting geospatial data  \n",
+    "## Section 1: Install GeoPandas package and its dependencides for plotting geospatial data  \n",
     "\n",
     "GeoPandas is an open source python package for visualizaing geospatial data. You can check the link below for the detailed instructions on how to install GeoPandas on your computer.\n",
     "\n",
     "[Link to the instructions of installing GeoPandas](http://geopandas.org/install.html)\n",
     "\n",
-    "There are two options to install GeoPandas package:\n",
+    "Open Anaconda-Navigator, then go to \"Environments\" and search \"geopandas\" to install, which might take a while, as all the dependencies (such as shapely, fiona, six, and pyproj) need to installed first.\n",
     "\n",
-    "1. Type the following command in your **terminal window** to install GeoPandas.\n",
-    "\n",
-    "    **pip install geopandas**\n",
-    "    \n",
-    "\n",
-    "2. Open Anaconda-Navigator, then go to \"Environments\" and search \"geopandas\" to install, which might take a while, as all the dependencies (such as shapely, fiona, six, and pyproj) need to installed first.\n",
-    "\n",
-    "After GeoPandas is installed, please read in the file (2018.catalog.csv) created from the pre-class assignment."
+    "After GeoPandas is installed, please read in the file (2018.catalog.csv) created from the other notebook python_data_importing.ipynb."
    ]
   },
   {
@@ -493,7 +474,7 @@
    "source": [
     "\n",
     "## Questions: \n",
-    "### Please answer the following four questions (total 1% bonus)"
+    "### Please answer the following four questions "
    ]
   },
   {
@@ -556,9 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Great job! You're done with your in-class assignment!\n",
-    "\n",
-    "Now, you just need to submit this assignment by uploading it to the course Desire2Learn web page.  Go to Assessments -> Assignments, find the link for the in-class assignment, and upload it there. You and your teammates will get 1% bonus for participation and up to 1% bonus based on completion toward your final grade. "
+    "### Great job! You're done with your python data analysis and visualization tutorial!"
    ]
   }
  ],
@@ -578,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
