--- a/Jupyter_Notebook_Instruction_tex/Jupyter_Notebook_Setup.tex
+++ b/Jupyter_Notebook_Instruction_tex/Jupyter_Notebook_Setup.tex
@@ -22,10 +22,37 @@
 \begin{document}
 
 \section*{Jupyter Notebook Set up and Anaconda Installation}
-The goal of this tutorial is to set up Python program for your research projects. Jupyter Notebook will be used for this purpose. \\ \\
-There are two ways you can run Jupyter Notebook with Python, by connecting to the engineering JupyterHub server or by installing python on your personal computer.
 
-\subsection*{Option 1: Connect to the engineering JupyterHub server}
+\textbf{Min Chen (\href{chenmi22@msu.edu}{chenmi22@msu.edu}}) \\ 
+\textbf{Last updated on May 25, 2019}
+
+The goal of this tutorial is to set up Python program for your research projects. Jupyter Notebook, an interactive environment for python coding, will be used for this purpose. 
+There are two ways you can run Jupyter Notebook with Python, by installing python on your personal computer or by connecting to the engineering JupyterHub server.
+
+\subsection*{Option 1: Install python on your personal computer}
+\begin{enumerate}[noitemsep]
+\item Go to the Anaconda Download webpage \href{https://www.anaconda.com/distribution}{https://www.anaconda.com/distribution}.
+\item Choose your operating system (Windows, OS X, or Linux) and download Anaconda (Python 3.7 version, 64 bit recommended). 
+Install Anaconda on your computer by double clicking on the package you downloaded and follow the instructions.
+\item Open \say{Anaconda-Navigator},  click on \say{Environments} tab and search the relevant packages that are not installed, which includes
+obspy, obspyck, obspandas, and geopandas. Select them and then click on the \say{Apply} button. You will also need to install the dependencies of 
+geopandas in the way as installing the packages mentioned above. Required dependencies: numpy, pandas (version 0.19.1 or later), shapely (interface to GEOS),
+fiona (interface to GDAL), pyproj (interface to PROJ), six. Further, optional dependencies are: rtree 
+(optional; spatial index to improve performance and required for overlay operations; interface to libspatialindex), psycopg2 (optional; for PostGIS connection),
+geopy (optional; for geocoding). For plotting, these additional packages may be used: matplotlib, descartes, mapclassify.
+
+\item Open the command line program on your computer
+\begin{itemize}[noitemsep]
+\item On Windows, type CMD in the run box in the start menu.
+\item On Mac, type \say{terminal} and hit enter in the Finder window, or double click to open the terminal application in the Utility folder.
+\item On Linux, open up a console application.
+\end{itemize}
+\item Type \say{ipython notebook} or \say{jupyter notebook} in the command line and hit enter.
+\end{enumerate}
+
+If everything goes correctly, a browser window should open up with the Jupyter interface running. If things don\textquotesingle t work, don\textquotesingle t worry, we will help you get started.
+
+\subsection*{Option 2: Connect to the engineering JupyterHub server}
 You can request an engineering computing account. If this is your first time using your Engineering account you will need to activate the account by
 going to the following website: 
 \begin{center}
@@ -41,26 +68,12 @@ Once your account is activated you can access the classroom Jupyterhub server us
 \end{enumerate}
 If everything is working properly you will see the main \say{Files} windows in the Jupyter interface.
 
-\subsection*{Option 2: Install python on your personal computer}
-\begin{enumerate}[noitemsep]
-\item Go to the Anaconda Download webpage \href{https://www.anaconda.com/distribution}{https://www.anaconda.com/distribution}.
-\item Choose your operating system (Windows, OS X, or Linux) and download Anaconda (Python 3.7 version, 64 bit recommended).
-\item Install all the dependencies of Pandas and GeoPandas using the Anaconda Navigator, click \say{Environments} tab and search the relevant packages that are not installed, select them and then click on the \say{Apply} button.
-\item Open the command line program on your computer
-\begin{itemize}[noitemsep]
-\item On Windows, type CMD in the run box in the start menu.
-\item On Mac, type \say{terminal} and hit enter in the Finder window, or double click to open the terminal application in the Utility folder.
-\item On Linux, open up a console application.
-\end{itemize}
-\item Type \say{ipython notebook} or \say{jupyter notebook} in the command line and hit enter.
-\end{enumerate}
-
-If everything goes correctly, a browser window should open up with the Jupyter interface running. If things don\textquotesingle t work, don\textquotesingle t worry, we will help you get started.
 
 \subsection*{Instructions for getting IPython notebook files into Jupyter}
 IPython notebooks, also known as Jupyter notebooks, are files that end with the .ipynb extension. We will give you two example files to work with, you can edit them for your own learning or research 
-purpose. Please download the ipynb files from the our GitHub repository
-(\href{https://github.com/msu-seismo/python-data-analysis-viz.git}{https://github.com/msu-seismo/python-data-analysis-viz.git}). Once you have an ipynb file you can load it into Jupyter using the
+purpose. Please download the ipynb files from the our GitHub repository by using the following command line: \\\\
+git clone \href{https://github.com/msu-seismo/python-data-analysis-viz.git}{https://github.com/msu-seismo/python-data-analysis-viz.git} \\\\
+You can load the ipynb files in the directory downloaded from our GitHub repository into Jupyter using the
 \say{upload} button on the main \say{Files} tab in the Jupyter web interface. Clicking on this button will
 cause a file browser window to open. Just navigate to your ipynb file, select it and hit the
 open button. Once you see your filename in the Jupyter window you can just click on that
