--- a/Python101_LionKrischer_modified.ipynb
+++ b/Python101_LionKrischer_modified.ipynb
@@ -21,8 +21,7 @@
     "##### Authors:\n",
     "* Lion Krischer ([@krischer](https://github.com/krischer))\n",
     "\n",
-    "##### modified by: \n",
-    "* Tong Zhou (zhouton3@msu.edu)\n",
+    "###### modified by: Tong Zhou (zhouton3@msu.edu)\n",
     "---"
    ]
   },
