Revert "Update Python101_LionKrischer_modified.ipynb"
This reverts commit e3ea35c0358d7c3cbcc933dd7b2dac04f2be623f.

--- a/Python101_LionKrischer_modified.ipynb
+++ b/Python101_LionKrischer_modified.ipynb
@@ -21,7 +21,8 @@
     "##### Authors:\n",
     "* Lion Krischer ([@krischer](https://github.com/krischer))\n",
     "\n",
-    "###### modified by: Tong Zhou (zhouton3@msu.edu)\n",
+    "##### modified by: \n",
+    "* Tong Zhou (zhouton3@msu.edu)\n",
     "---"
    ]
   },
