moved first section to Resources

--- a/Jupyter_Notebook_Instruction_tex/Jupyter_Notebook_Setup.tex
+++ b/Jupyter_Notebook_Instruction_tex/Jupyter_Notebook_Setup.tex
@@ -33,23 +33,6 @@
 The goal of this tutorial is to set up Python program for your research projects. Jupyter Notebook, an interactive environment for python coding, will be used for this purpose. 
 There are 3 ways you can run Jupyter Notebook with Python: 1) installing python on your personal computer, 2) run Jupyter Notebook remotely on the icer hpcc, and 3) connecting to the engineering JupyterHub server.
 
-\subsection*{Before you go:}
-Check the operating system you use. 
-
-\textbf{Linux:} 
-
-You should be good to skip this section.
-
-\textbf{Macos:} 
-
-Install the xcode command line tools.  You may find it helpful in this link: \href{http://osxdaily.com/2014/02/12/install-command-line-tools-mac-os-x/}{http://osxdaily.com/ 2014/02/12/install-command-line-tools-mac-os-x/}. 
-
-Install homebrew: It is a useful software package manager on macos.  \href{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}
-
-\textbf{Windows10:}
-
-Install the ubuntu-subsystem on your computer. It is fast and safe, with nearly all the features of the ubuntu-linux available. This link may be helpful: \href{https://itsfoss.com/install-bash-on-windows/}{https://itsfoss.com/install-bash-on-windows/}
-
 \subsection*{Option 1: Install python on your personal computer}
 \begin{enumerate}[noitemsep]
 \item Check your system architecture and python environment. Usually recent computers use x86-64 architecture. Type python in your command line to check your python version.
@@ -145,5 +128,32 @@ You can clone his git to either your own computer or your icer hpcc account by
 \begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 git clone https://github.com/krischer/mess_2019.git
 \end{lstlisting}
+
+If you really want to learn coding, GUI is not a good idea. You may want to get used to the command line tools. Here are some ideas of how to set-up your command-line environment on your personal computer.
+
+Check the operating system you use. 
+
+\textbf{Linux:} 
+
+If you use Linux, I am sure you are used to command-line tools. You should be good to skip this section.
+
+\textbf{Macos:} 
+
+If you never used the commandline, hit command+space, search terminal and then open one.
+
+Macos also use bash. You can find bash tutorials in Shawn Wei's webpage.
+\href{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}{https://sites.google.com/msu.edu/ wei-seismic-training/linux-101?authuser=0}
+
+Install the xcode command line tools.  You may find it helpful in this link: \href{http://osxdaily.com/2014/02/12/install-command-line-tools-mac-os-x/}{http://osxdaily.com/ 2014/02/12/install-command-line-tools-mac-os-x/}. 
+
+Install homebrew: It is a useful software package manager on macos.  \href{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}
+
+\textbf{Windows10:}
+
+Install the ubuntu-subsystem on your computer. It is fast and safe, with nearly all the features of the ubuntu-linux available. This link may be helpful: \href{https://itsfoss.com/install-bash-on-windows/}{https://itsfoss.com/install-bash-on-windows/}
+
+When successfully installed ubuntu-subsystem, open command line tools by finding the 'ubuntu' in the startup menu, or open a cmd window and type bash.
+
+You can also find resources for learning linux in \href{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}
 
 \end{document}
