updated Jupyter_Notebook_Instruction_tex and Jupyter_Notebook_Setup.pdf

--- a/Jupyter_Notebook_Instruction_tex/Jupyter_Notebook_Setup.tex
+++ b/Jupyter_Notebook_Instruction_tex/Jupyter_Notebook_Setup.tex
@@ -26,18 +26,23 @@
 
 \section*{Jupyter Notebook Set up and Anaconda Installation}
 
-\textbf{Min Chen (\href{chenmi22@msu.edu}{chenmi22@msu.edu}}) \\ 
-\textbf{Tong Zhou (\href{zhouton3@msu.edu}{zhouton3@msu.edu}}) \\ 
-\textbf{Last updated on May 26, 2019}
+\textbf{MSU Data Science and Computational Seismology Lab}\\\\
+Min Chen (\href{chenmi22@msu.edu}{chenmi22@msu.edu}) \\ 
+Tong Zhou (\href{zhouton3@msu.edu}{zhouton3@msu.edu})\\ 
+\textbf{Last updated on May 26, 2019} \\
 
 The goal of this tutorial is to set up Python program for your research projects. Jupyter Notebook, an interactive environment for python coding, will be used for this purpose. 
-There are 3 ways you can run Jupyter Notebook with Python: 1) installing python on your personal computer, 2) run Jupyter Notebook remotely on the icer hpcc, and 3) connecting to the engineering JupyterHub server.
+There are three ways you can run Jupyter Notebook with Python: 1) installing python on your personal computer, 2) run Jupyter Notebook remotely on the iCER 
+High Performance Computing Center (HPCC) machine, and 3) connecting to the engineering JupyterHub server.
 
 \subsection*{Option 1: Install python on your personal computer}
 \begin{enumerate}[noitemsep]
 \item Check your system architecture and python environment. Usually recent computers use x86-64 architecture. Type python in your command line to check your python version.
-\item Go to the Anaconda Download webpage \href{https://www.anaconda.com/distribution}{https://www.anaconda.com/distribution}.
-\item Choose your operating system (Windows, OS X, or Linux. If using a ubuntu-subsystem in windows10, choose Linux) and download Anaconda suitable for your environment.
+\item Go to the Anaconda Download webpage:
+\begin{center}
+\href{https://www.anaconda.com/distribution/\#download-section}{https://www.anaconda.com/distribution/\#download-section}
+\end{center}
+\item Choose your operating system (Windows, OS X, or Linux. If using a ubuntu-subsystem in windows10, choose Linux). Click on \say{Python 3.7 version} and \say{64-Bit Graphical Installer (662 MB)}.
 Install Anaconda on your computer by double clicking on the package you downloaded and follow the instructions.
 \item Open \say{Anaconda-Navigator},  click on \say{Environments} tab and search the relevant packages that are not installed, which includes
 obspy, obspyck, obspandas, and geopandas. Select them and then click on the \say{Apply} button. You will also need to install the dependencies of 
@@ -57,17 +62,17 @@ geopy (optional; for geocoding). For plotting, these additional packages may be 
 
 If everything goes correctly, a browser window should open up with the Jupyter interface running. If things don\textquotesingle t work, don\textquotesingle t worry, we will help you get started.
 
-\subsection*{Option 2: Run Jupyter notebook on the icer hpcc}
-MSU hpcc has Linux x86-64 arcitecture and python 2.7 environment by default. To activate the anaconda on the icer hpcc, use this command:
-\begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+\subsection*{Option 2: Run Jupyter notebook on the iCER HPCC machine}
+MSU iCER HPCC machine has Linux x86-64 architecture and python 2.7 environment by default. To activate the anaconda on the iCER HPCC, use this command:
+\begin{lstlisting}[language=bash,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 module load Anaconda2/4.2.0
 \end{lstlisting}
-Or you can download the latest anaconda through the official website \href{https://www.anaconda.com/distribution/#download-section}{https://www.anaconda.com/ distribution/#download-section}. Choose the right version (Linux, x86-64, python2.7) Log in to your account, use scp to copy the local installer to your home folder, and then install the anaconda as instructed in option 1.
-\begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
-scp local_file usrname@hpcc.msu.edu:remote_folder
+Or you can download the latest anaconda through the official website \href{https://www.anaconda.com/distribution/\#download-section}{https://www.anaconda.com/ distribution/\#download-section}. Choose the right version (Linux, x86-64, python2.7) Log into your account, use scp to copy the local installer to your home folder, and then install the anaconda as instructed in Option 1.
+\begin{lstlisting}[language=bash, keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+scp local_file usrname@hpcc.msu.edu:hpcc_remote_folder
 \end{lstlisting}
-When successfully installed (or activated) anaconda, you may install all the package needed. You may want to create a virtural environment first, and then install jupyter notebook, numpy, obspy, ...
- \begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+After you successfully installed (or activated) anaconda, you may then install all the required packages. You may create a virtual environment first, and then install Jupyter Notebook, numpy, obspy, ...
+ \begin{lstlisting}[language=bash,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 conda create -n environment_name python=3.7
 conda install jupyter notebook
 conda install numpy
@@ -79,11 +84,12 @@ conda install obspy
 Next step is to set up the port forwarding.
 
 Open a new terminal window, use this command to log in:
-\begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+\begin{lstlisting}[language=bash,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 ssh -L localhost:portnumber1:localhost:portnumber2 usrname@hpcc.msu.edu
  \end{lstlisting}
-It established a link that forwards the output of the remote computer from portnumber2 to the local computer on portnumber1. Note: use different portnumber2 between 30000 to 60000 will reduce the chance that you got interference with others. Then use this command to start a jupyter notebook
-\begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+It established a link that forwards the output of the remote computer from portnumber2 to the local computer on portnumber1. 
+Note: use different portnumber2 between 30000 to 60000 will reduce the chance that you got interference with others. Then use this command to start a Jupyter Notebook
+\begin{lstlisting}[language=bash, keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 jupyter notebook --no-browser --port=portnumber2
  \end{lstlisting}
 Then copy and paste the output URL to your local browser, and change the portnumber2 to portnumber1, you should be all set.
@@ -95,7 +101,7 @@ going to the following website:
 \href{https://www.egr.msu.edu/decs/myaccount/?page=activate}{https://www.egr.msu.edu/decs/myaccount/?page=activate} 
 \end{center}
 Enter your MSU NetID. The initial password will be your APID with an @ at the end (example: A12345678@) and then you have to set a new password that meets the
-requirements listed on the page. Verify the password. Then agree to the terms and Activate. \\ \\
+requirements listed on the page. Verify the password. Then agree to the terms and Activate. \\ 
 Once your account is activated you can access the classroom Jupyterhub server using the following instructions:
 \begin{enumerate}[noitemsep]
 \item Open up a web browser and go to the URL \href{https://jupyterhub.egr.msu.edu}{https://jupyterhub.egr.msu.edu}.
@@ -107,53 +113,78 @@ If everything is working properly you will see the main \say{Files} windows in t
 
 \subsection*{Instructions for getting IPython notebook files into Jupyter}
 IPython notebooks, also known as Jupyter notebooks, are files that end with the .ipynb extension. We will give you two example files to work with, you can edit them for your own learning or research 
-purpose. Please download the ipynb files from the our GitHub repository by using the following command line: \\\\
-\begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+purpose. Please download the ipynb files from the our GitHub repository by using the following command line: \\
+\begin{lstlisting}[language=bash,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 git clone https://github.com/msu-seismo/python-data-analysis-viz.git
 \end{lstlisting}
 
-or visit the website  \href{https://github.com/msu-seismo/python-data-analysis-viz.git}{https://github.com/msu-seismo/python-data-analysis-viz.git} \\\\
+or visit the website to browse the files in the repository: 
+\begin{center}
+\href{https://github.com/msu-seismo/python-data-analysis-viz.git}{https://github.com/msu-seismo/python-data-analysis-viz.git} \\
+\end{center}
 You can load the ipynb files in the directory downloaded from our GitHub repository into Jupyter using the
-\say{upload} button on the main \say{Files} tab in the Jupyter web interface. Clicking on this button will
+\say{upload} button on the main \say{Files} tab in the Jupyter Notebook web interface. Clicking on this button will
 cause a file browser window to open. Just navigate to your ipynb file, select it and hit the
-open button. Once you see your filename in the Jupyter window you can just click on that
+open button. Once you see your filename in the Jupyter Notebook window you can just click on that
 name to start using that file. 
 
 \subsection*{Resources}
-I personally recommend Lion Krischer's workshop for you to learn the basic idea of python, from simple a + b to complex signal processing. You can find Lion's ipython notebooks from:
+We recommend you to browse through Lion Krischer's GitHub repository:
+\begin{center}
+\href{https://github.com/krischer/mess\_2019}{https://github.com/krischer/mess\_2019} 
+\end{center}
+Actually, only this following ipynb file is relevant to our tutorial on Tuesday: 
+\begin{center}
+\href{https://raw.githubusercontent.com/krischer/mess_2019/master/1_monday/00_Python_Crash_Course.ipynb}{1\_monday/00\_Python\_Crash\_Course.ipynb}
+\end{center}
+Please download this Jupyter Notebook by clicking on  \say{Raw} button, right clicking your mouse, and \say{save as} ipython file. This notebook provide some basics 
+of python coding, from simple a + b to complex signal processing.
 
-\href{https://github.com/krischer/mess_2019}{https://github.com/krischer/mess\_2019}
+Alternatively, you can clone this entire GitHub repository to either your own computer or your iCER HPCC account by using the following command: \\
 
-You can clone his git to either your own computer or your icer hpcc account by
-\begin{lstlisting}[language=bash, numbers=left, numberstyle=\tiny,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
+\begin{lstlisting}[language=bash,keywordstyle=\color{blue!70},basicstyle=\ttfamily]
 git clone https://github.com/krischer/mess_2019.git
 \end{lstlisting}
 
-If you really want to learn coding, GUI is not a good idea. You may want to get used to the command line tools. Here are some ideas of how to set-up your command-line environment on your personal computer.
+
+If you really want to learn coding, instead of GUI you may want to get used to the command lines. 
+Here are some ideas of  setting up your command-line environment on your personal computer.
 
 Check the operating system you use. 
 
 \textbf{Linux:} 
 
-If you use Linux, I am sure you are used to command-line tools. You should be good to skip this section.
+If you use Linux, you might have learned how to use command lines.  You can skip the rest of this section.
 
-\textbf{Macos:} 
+\textbf{MacOS:} 
 
-If you never used the commandline, hit command+space, search terminal and then open one.
+If you never used command lines in a terminal, hit command+space, search terminal and then open one.
 
-Macos also use bash. You can find bash tutorials in Shawn Wei's webpage.
-\href{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}{https://sites.google.com/msu.edu/ wei-seismic-training/linux-101?authuser=0}
-
-Install the xcode command line tools.  You may find it helpful in this link: \href{http://osxdaily.com/2014/02/12/install-command-line-tools-mac-os-x/}{http://osxdaily.com/ 2014/02/12/install-command-line-tools-mac-os-x/}. 
-
-Install homebrew: It is a useful software package manager on macos.  \href{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}
+MacOS also use bash. You can find plenty of bash scripting tutorials on YouTube. You may find the following three videos useful.
+\begin{center}
+\href{https://www.youtube.com/watch?v=NSu4IWlOU7k}{Bash Scripting Basics Part 1}\\
+\href{https://www.youtube.com/watch?v=NSu4IWlOU7k}{Bash Scripting Basics Part 2}\\
+\href{https://www.youtube.com/watch?v=NSu4IWlOU7k}{Bash Scripting Basics Part 3}\\
+\end{center}
+Install the xcode command line tools.  You may find this link helpful: 
+\begin{center}
+\href{http://osxdaily.com/2014/02/12/install-command-line-tools-mac-os-x/}{http://osxdaily.com/ 2014/02/12/install-command-line-tools-mac-os-x/}. 
+\end{center}
+Install homebrew: It is a useful software package manager on MacOS.  
+\begin{center}
+\href{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}{http://osxdaily.com/2018/03/07/how-install-homebrew-mac-os/}\\
+\end{center}
 
 \textbf{Windows10:}
 
-Install the ubuntu-subsystem on your computer. It is fast and safe, with nearly all the features of the ubuntu-linux available. This link may be helpful: \href{https://itsfoss.com/install-bash-on-windows/}{https://itsfoss.com/install-bash-on-windows/}
+Install the ubuntu-subsystem on your computer. It is fast and safe, with nearly all the features of the ubuntu-linux available. This link may be helpful: 
+\begin{center}
+\href{https://itsfoss.com/install-bash-on-windows/}{https://itsfoss.com/install-bash-on-windows/} 
+\end{center}
+After you successfully installed ubuntu-subsystem, please open command line tools by finding the 'ubuntu' in the startup menu, or open a cmd window and type bash.
 
-When successfully installed ubuntu-subsystem, open command line tools by finding the 'ubuntu' in the startup menu, or open a cmd window and type bash.
-
-You can also find resources for learning linux in \href{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}
-
+You can also find relevant resources for learning linux through this web page: 
+\begin{center}
+\href{https://sites.google.com/msu.edu/wei-seismic-training/linux-101?authuser=0}{seismic-training/linux-101 of Dr. Shawn Wei's Lab}
+\end{center}
 \end{document}
